# Cpp-JsonDeserialiser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  adaptor.nlohmann.h  adaptor.qt.h  basic_types.hpp.in  decorator.h.in  json_deserialise.h.in  json_deserialise.hpp  json_deserialise.hpp.in  json_deserialise.qt.h  json_deserialise.qt.h.in  json_deserialise.unfinished.hpp  macros.h.in  macros.hpp  type_deduction.h.in  type_deduction.hpp.in  types.nlohmann.h  types.qt.h  utilities.hpp
