cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(JSON_DESERIALISE_SUPPORTED_JSON_LIBRARY QT)
option(JSON_DESERIALISE_DEFAULT_JSON_LIBRARY "" OFF)
option(JSON_DESERIALISE_JSON_LIBRARIES "" OFF)

if (NOT JSON_DESERIALISE_JSON_LIBRARIES)
    if (NOT JSON_DESERIALISE_DEFAULT_JSON_LIBRARY)
        set(JSON_DESERIALISE_DEFAULT_JSON_LIBRARY "QT")
    endif()
    set(JSON_DESERIALISE_JSON_LIBRARIES ${JSON_DESERIALISE_DEFAULT_JSON_LIBRARY})
elseif (NOT JSON_DESERIALISE_DEFAULT_JSON_LIBRARY)
    list(GET JSON_DESERIALISE_JSON_LIBRARIES 0 JSON_DESERIALISE_DEFAULT_JSON_LIBRARY)
endif()

set(${JSON_DESERIALISE_DEFAULT_JSON_LIBRARY}_DEFAULT ON)

foreach(lib ${JSON_DESERIALISE_JSON_LIBRARIES})
    string(TOLOWER ${lib} lib)
    string(TOUPPER ${lib} LIB_ID)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/json_deserialise.${lib}.h.in ${CMAKE_CURRENT_LIST_DIR}/json_deserialise.${lib}.h)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/json_deserialise.hpp.in ${CMAKE_CURRENT_LIST_DIR}/json_deserialise.${lib}.hpp)
endforeach()

string(TOLOWER ${JSON_DESERIALISE_DEFAULT_JSON_LIBRARY} JSON_DESERIALISE_DEFAULT_JSON_LIBRARY_SUFFIX)
configure_file(${CMAKE_CURRENT_LIST_DIR}/json_deserialise.h.in ${CMAKE_CURRENT_LIST_DIR}/json_deserialise.h)
