cmake_minimum_required(VERSION 3.14)

if (NOT CMAKE_CXX_STANDARD OR CMAKE_CXX_STANDARD LESS 17)
    set(CMAKE_CXX_STANDARD 17)
endif()
set(CMAKE_CXX_STANDARD_REQUIRED ON)

message("Currently only Qt supported.")
option(JSON_DESERIALISE_DEFAULT_JSON_LIBRARY "" OFF)
option(JSON_DESERIALISE_JSON_LIBRARIES "" OFF)

if (NOT JSON_DESERIALISE_JSON_LIBRARIES)
    if (NOT JSON_DESERIALISE_DEFAULT_JSON_LIBRARY)
        set(JSON_DESERIALISE_DEFAULT_JSON_LIBRARY "Qt")
    endif()
    set(JSON_DESERIALISE_JSON_LIBRARIES ${JSON_DESERIALISE_DEFAULT_JSON_LIBRARY})
elseif (NOT JSON_DESERIALISE_DEFAULT_JSON_LIBRARY)
    list(GET JSON_DESERIALISE_JSON_LIBRARIES 0 JSON_DESERIALISE_DEFAULT_JSON_LIBRARY)
endif()

foreach(LIB_ID ${JSON_DESERIALISE_JSON_LIBRARIES})
    string(TOLOWER ${LIB_ID} lib)
    if (${LIB_ID} STREQUAL ${JSON_DESERIALISE_DEFAULT_JSON_LIBRARY})
        set(JSON_DESERIALISER_DEFAULT_MODE ON)
    endif()
    string(APPEND LIB_ID "Adaptation")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/type_deduction.h.in ${CMAKE_CURRENT_LIST_DIR}/type_deduction.${lib}.h)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/type_deduction.hpp.in ${CMAKE_CURRENT_LIST_DIR}/type_deduction.${lib}.hpp)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/macros.h.in ${CMAKE_CURRENT_LIST_DIR}/macros.${lib}.h)
    unset(JSON_DESERIALISER_DEFAULT_MODE)
endforeach()

string(TOLOWER ${JSON_DESERIALISE_DEFAULT_JSON_LIBRARY} JSON_DESERIALISE_DEFAULT_JSON_LIBRARY_SUFFIX)
configure_file(${CMAKE_CURRENT_LIST_DIR}/json_deserialise.h.in ${CMAKE_CURRENT_LIST_DIR}/json_deserialise.h)
configure_file(${CMAKE_CURRENT_LIST_DIR}/json_deserialise.hpp.in ${CMAKE_CURRENT_LIST_DIR}/json_deserialise.hpp)
